Update SideWinder X1 Stock.cfg
Edited for BMG

--- a/SideWinder X1 Stock.cfg
+++ b/SideWinder X1 Stock.cfg
@@ -1,6 +1,6 @@
 [stepper_x]
 step_pin: ar54
-dir_pin: ar55
+dir_pin: !ar55
 enable_pin: !ar38
 microsteps: 16
 rotation_distance: 40
@@ -11,7 +11,7 @@ homing_speed: 40.0
 
 [stepper_y]
 step_pin: ar60
-dir_pin: ar61
+dir_pin: !ar61
 enable_pin: !ar56
 microsteps: 16
 rotation_distance: 40
@@ -23,7 +23,7 @@ homing_positive_dir: false
 
 [stepper_z]
 step_pin: ar46
-dir_pin: !ar48
+dir_pin: ar48
 enable_pin: !ar62
 microsteps: 16
 rotation_distance: 8
@@ -36,7 +36,7 @@ second_homing_speed: 1
 
 [stepper_z1]
 step_pin: ar36
-dir_pin: !ar34
+dir_pin: ar34
 enable_pin: !ar30
 microsteps: 16
 rotation_distance: 8
@@ -60,7 +60,7 @@ max_extrude_cross_section: 2.0
 
 [heater_bed]
 heater_pin: ar8
-sensor_type: EPCOS 100K B57560G104F
+sensor_type: Generic 3950
 sensor_pin: analog14
 min_temp: 5
 max_temp: 150
